--- a/Software_esphome/fil_pilote.yaml
+++ b/Software_esphome/fil_pilote.yaml
@@ -12,21 +12,44 @@
 ###############################################################################################
 
 substitutions:
-  node_name: 'fil_pilote'
-  name: 'Fil Pilote'
+  name: 'fil_pilote'
   comment: 'Gestion du chauffage par fil pilote et communication Linky.'
   area: 'Local Technique'
   
+  uart_esp_0_baudrate: '1200'  # Linky #1200 if historique >> #9600 if standard
+  
+esphome:
+  name: ${name}
+  comment: ${comment}
+  area: ${area}
+  project:
+    name: dackara.${name}
+    version: "1.0"
+
+# https://esphome.io/components/esp32.html
+esp32:
   board: 'esp32-s3-devkitc-1' #'esp32dev'
-  framework_type: 'arduino' #'esp-idf'
-  framework_version: 2.0.14 #'2.0.11' #'2.0.5' #'2.0.9'
-  platform_version: '6.5.0'  #'6.4.0' #'4.4.0' #'6.2.0'
-  
-  # ID du SX1509
-  sx1509_fp_bus: 'bus_sx1509_fp' 
-  # ID du bus I2C
-  i2c_id_fp_bus: 'bus_i2c_fp' 
-  
+  framework:
+    type: 'arduino' #'esp-idf'
+    version: '2.0.14' #'2.0.11' #'2.0.5' #'2.0.9'
+    platform_version: '6.5.0'  #'6.4.0' #'4.4.0' #'6.2.0'
+
+# Captive Portal: https://esphome.io/components/captive_portal.html
+captive_portal:
+
+# Logger Component: https://esphome.io/components/logger.html
+logger:
+
+# Native API Component: https://esphome.io/components/api.html
+api:
+
+# OTA Update Component: https://esphome.io/components/ota.html
+ota:
+
+# Web Server: https://esphome.io/components/web_server.html
+web_server:
+  port: 80
+
 # This should point to the public location of this yaml file.
 dashboard_import:
   package_import_url: github://Dackara/Fil_Pilote/Software_esphome/fil_pilote.yaml
@@ -41,128 +64,109 @@ improv_serial:
 
 # WiFi Component: https://esphome.io/components/wifi.html
 wifi:
-  ssid: !secret esphome_ssid
-  password: !secret esphome_password
-  # Economie d'energie du wifi, (#light par defaut sur ESP32). Plus l'économie est grande, plus les déconnexions peuvent être fréquentes.
-  power_save_mode: 'none'  #'none' #'light' #'hight'
+#  ssid: !secret esphome_ssid
+#  password: !secret esphome_password
+  # Economie d'energie du wifi. Plus l'économie est grande, plus les déconnexions peuvent être fréquentes.
+  power_save_mode: 'none'  #'none' #'light' #'hight' (#light par defaut sur ESP32)
   # Optional manual IP
-  manual_ip:
-    static_ip: '192.168.0.174' # '192.168.0.21'
-    gateway: '192.168.0.109'
-    subnet: '255.255.255.0'
+#  manual_ip:
+#    static_ip: ' '
+#    gateway: ' '
+#    subnet: ' '
   ap:
     ssid: 'Espilote Fallback Hotspot'
-    password: !secret esphome_password
+#    password: !secret esphome_password
     
 # https://esphome.io/guides/configuration-types#packages
 packages:
-  wifi: !include packages/wifi.yaml
-  device_base: !include packages/device_base.yaml
-  
-  # Déclaration du bus I2C et du composant SX1509 :
-  fp_sx1509: !include
-    file: packages/fil-pilote/sx1509.yaml
-    vars:
-      sx1509_fp: ${sx1509_fp_bus}
-      sx1509_address_fp: '0x3E' #'0x3F' #'0x70' #'0x71'
-      i2c_id_fp: ${i2c_id_fp_bus}
-  fp_i2c: !include
-    file: packages/fil-pilote/i2c.yaml
-    vars:
-      i2c_id_fp: ${i2c_id_fp_bus}
-      i2c_sda_fp: 'GPIO8'
-      i2c_scl_fp: 'GPIO9'
-      i2c_frequency: '50kHz'
+  device_base: !include packages/base/device_base.yaml
 
   # Déclaration des zones de chauffe piloté :
   fil_pilote_zone_1: !include
-    file: packages/fil-pilote/fil-pilote.yaml
+    file: packages/fil_pilote/device_fp_zone.yaml
     vars:
-      fp1_id: 'fp1'
-      fp1_name: 'Zone 1'
-      fp1_pos_gpio: '0'
-      fp1_neg_gpio: '1'
-      sx1509_fp: ${sx1509_fp_bus}
+      fpilote_id: chauffage_zone_1
+      fpilote_mode: 'mode'
+      fpilote_pos_pin: '0'
+      fpilote_neg_pin: '1'
+      fpilote_hub: sx1509_hub1
 
   fil_pilote_zone_2: !include
-    file: packages/fil-pilote/fil-pilote.yaml
+    file: packages/fil_pilote/device_fp_zone.yaml
     vars:
-      fp1_id: 'fp2'
-      fp1_name: 'Zone 2'
-      fp1_pos_gpio: '2'
-      fp1_neg_gpio: '3'
-      sx1509_fp: ${sx1509_fp_bus}
+      fpilote_id: chauffage_zone_2
+      fpilote_mode: 'mode'
+      fpilote_pos_pin: '2'
+      fpilote_neg_pin: '3'
+      fpilote_hub: sx1509_hub1
       
   fil_pilote_zone_3: !include
-    file: packages/fil-pilote/fil-pilote.yaml
+    file: packages/fil_pilote/device_fp_zone.yaml
     vars:
-      fp1_id: 'fp3'
-      fp1_name: 'Zone 3'
-      fp1_pos_gpio: '4'
-      fp1_neg_gpio: '5'
-      sx1509_fp: ${sx1509_fp_bus}
+      fpilote_id: chauffage_zone_3
+      fpilote_mode: 'mode'
+      fpilote_pos_pin: '4'
+      fpilote_neg_pin: '5'
+      fpilote_hub: sx1509_hub1
       
   fil_pilote_zone_4: !include
-    file: packages/fil-pilote/fil-pilote.yaml
+    file: packages/fil_pilote/device_fp_zone.yaml
     vars:
-      fp1_id: 'fp4'
-      fp1_name: 'Zone 4'
-      fp1_pos_gpio: '6'
-      fp1_neg_gpio: '7'
-      sx1509_fp: ${sx1509_fp_bus}
+      fpilote_id: chauffage_zone_4
+      fpilote_mode: 'mode'
+      fpilote_pos_pin: '6'
+      fpilote_neg_pin: '7'
+      fpilote_hub: sx1509_hub1
 
-###############################################
-#       A supprimer si seulement 4 zones      #
-###############################################
-#                      I                      #
-#                     \_/                     #
-#                      *                      #
-  fil_pilote_zone_5: !include                 #
-    file: packages/fil-pilote/fil-pilote.yaml #
-    vars:                                     #
-      fp1_id: 'fp5'                           #
-      fp1_name: 'Zone 5'                      #
-      fp1_pos_gpio: '8'                       #
-      fp1_neg_gpio: '9'                       #
-      sx1509_fp: ${sx1509_fp_bus}             #
-#                                             #
-  fil_pilote_zone_6: !include                 #
-    file: packages/fil-pilote/fil-pilote.yaml #
-    vars:                                     #
-      fp1_id: 'fp6'                           #
-      fp1_name: 'Zone 6'                      #
-      fp1_pos_gpio: '10'                      #
-      fp1_neg_gpio: '11'                      #
-      sx1509_fp: ${sx1509_fp_bus}             #
-#                                             #
-  fil_pilote_zone_7: !include                 #
-    file: packages/fil-pilote/fil-pilote.yaml #
-    vars:                                     #
-      fp1_id: 'fp7'                           #
-      fp1_name: 'Zone 7'                      #
-      fp1_pos_gpio: '12'                      #
-      fp1_neg_gpio: '13'                      #
-      sx1509_fp: ${sx1509_fp_bus}             #
-#                                             #
-  fil_pilote_zone_8: !include                 #
-    file: packages/fil-pilote/fil-pilote.yaml #
-    vars:                                     #
-      fp1_id: 'fp8'                           #
-      fp1_name: 'Zone 8'                      #
-      fp1_pos_gpio: '14'                      #
-      fp1_neg_gpio: '15'                      #
-      sx1509_fp: ${sx1509_fp_bus}             #
-#                                             #
-###############################################
+###################################################
+#         A supprimer si seulement 4 zones        #
+###################################################
+#                        I                        #
+#                       \_/                       #
+#                        *                        #
+  fil_pilote_zone_5: !include                     #
+    file: packages/fil_pilote/device_fp_zone.yaml #
+    vars:                                         #
+      fpilote_id: chauffage_zone_5                #
+      fpilote_mode: 'mode'                        #
+      fpilote_pos_pin: '8'                        #
+      fpilote_neg_pin: '9'                        #
+      fpilote_hub: sx1509_hub1                    #
+#                                                 #
+  fil_pilote_zone_6: !include                     #
+    file: packages/fil_pilote/device_fp_zone.yaml #
+    vars:                                         #
+      fpilote_id: chauffage_zone_6                #
+      fpilote_mode: 'mode'                        #
+      fpilote_pos_pin: '10'                       #
+      fpilote_neg_pin: '11'                       #
+      fpilote_hub: sx1509_hub1                    #
+#                                                 #
+  fil_pilote_zone_7: !include                     #
+    file: packages/fil_pilote/device_fp_zone.yaml #
+    vars:                                         #
+      fpilote_id: chauffage_zone_7                #
+      fpilote_mode: 'mode'                        #
+      fpilote_pos_pin: '12'                       #
+      fpilote_neg_pin: '13'                       #
+      fpilote_hub: sx1509_hub1                    #
+#                                                 #
+  fil_pilote_zone_8: !include                     #
+    file: packages/fil_pilote/device_fp_zone.yaml #
+    vars:                                         #
+      fpilote_id: chauffage_zone_8                #
+      fpilote_mode: 'mode'                        #
+      fpilote_pos_pin: '14'                       #
+      fpilote_neg_pin: '15'                       #
+      fpilote_hub: sx1509_hub1                    #
+#                                                 #
+###################################################
 
   # Déclaration du module TéléInfo Client
   teleinfo: !include 
-    file: packages/teleinfo/historique.yaml     # Si compteur en mode Historique
-#    file: packages/teleinfo/standard.yaml      # Si compteur en mode Standard
+    file: packages/addons/teleinfo/historique.yaml      # Si compteur en mode "Historique"
+#    file: packages/addons/teleinfo/standard.yaml       # Si compteur en mode "Standard"
     vars:
-      linky_name: 'Linky'
-      tic_id: 'myteleinfo'
-      tic_uart_id: 'tic_uart_bus'
-      tic_rx_pin: 'GPIO3'
-      tic_tx_pin: 'GPIO1'
-      tic_update_interval: '5s'
+      linky_name: 'myteleinfo'
+      linky_uartid: uart_esp_0
+      linky_update_interval: '5s'
