--- a/Software_esphome/fil_pilote.yaml
+++ b/Software_esphome/fil_pilote.yaml
@@ -13,15 +13,13 @@
 
 substitutions:
   name: 'fil_pilote'
-  comment: 'Gestion du chauffage par fil pilote et communication Linky.'
-  area: 'Local Technique'
   
-  uart_esp_0_baudrate: '1200'  # Linky #1200 if historique >> #9600 if standard
+  uart_esp_0_baudrate: '1200'  # Pour option Linky : #1200 en mode historique >> #9600 en mode standard
   
 esphome:
   name: ${name}
-  comment: ${comment}
-  area: ${area}
+  comment: 'Gestion du chauffage par fil pilote et communication Linky.'
+  area: 'Local Technique'
   project:
     name: dackara.${name}
     version: "1.0"
@@ -31,8 +29,8 @@ esp32:
   board: 'esp32-s3-devkitc-1' #'esp32dev'
   framework:
     type: 'arduino' #'esp-idf'
-    version: '2.0.14' #'2.0.11' #'2.0.5' #'2.0.9'
-    platform_version: '6.5.0'  #'6.4.0' #'4.4.0' #'6.2.0'
+    version: '2.0.14' #'2.0.11'
+    platform_version: '6.5.0'  #'6.4.0'
 
 # Captive Portal: https://esphome.io/components/captive_portal.html
 captive_portal:
@@ -52,31 +50,21 @@ web_server:
 
 # This should point to the public location of this yaml file.
 dashboard_import:
-  package_import_url: github://Dackara/Fil_Pilote/Software_esphome/fil_pilote.yaml
+  package_import_url: github://dackara/fil_pilote/software_esphome/fil_pilote.yaml
+  import_full_config: false #true
+
+# WiFi Component: https://esphome.io/components/wifi.html
+wifi:
+  ap:
+    ssid: 'Espilote Fallback Hotspot'
 
 # Configuring Wi-Fi on an ESP32 device by using Bluetooth
 esp32_improv:
   authorizer: none
 
-# Sets up the improv via serial client for Wi-Fi provisioning.
-# Handy if your device has a usb port for the user to add credentials when they first get it.
+# Sets up the improv via serial client for Wi-Fi provisioning
 improv_serial:
 
-# WiFi Component: https://esphome.io/components/wifi.html
-wifi:
-#  ssid: !secret esphome_ssid
-#  password: !secret esphome_password
-  # Economie d'energie du wifi. Plus l'économie est grande, plus les déconnexions peuvent être fréquentes.
-  power_save_mode: 'none'  #'none' #'light' #'hight' (#light par defaut sur ESP32)
-  # Optional manual IP
-#  manual_ip:
-#    static_ip: ' '
-#    gateway: ' '
-#    subnet: ' '
-  ap:
-    ssid: 'Espilote Fallback Hotspot'
-#    password: !secret esphome_password
-    
 # https://esphome.io/guides/configuration-types#packages
 packages:
   device_base: !include packages/base/device_base.yaml
@@ -89,7 +77,7 @@ packages:
       fpilote_mode: 'mode'
       fpilote_pos_pin: '0'
       fpilote_neg_pin: '1'
-      fpilote_hub: sx1509_hub1
+      fpilote_hub: sx1509_hub0
 
   fil_pilote_zone_2: !include
     file: packages/fil_pilote/device_fp_zone.yaml
@@ -98,7 +86,7 @@ packages:
       fpilote_mode: 'mode'
       fpilote_pos_pin: '2'
       fpilote_neg_pin: '3'
-      fpilote_hub: sx1509_hub1
+      fpilote_hub: sx1509_hub0
       
   fil_pilote_zone_3: !include
     file: packages/fil_pilote/device_fp_zone.yaml
@@ -107,7 +95,7 @@ packages:
       fpilote_mode: 'mode'
       fpilote_pos_pin: '4'
       fpilote_neg_pin: '5'
-      fpilote_hub: sx1509_hub1
+      fpilote_hub: sx1509_hub0
       
   fil_pilote_zone_4: !include
     file: packages/fil_pilote/device_fp_zone.yaml
@@ -116,7 +104,7 @@ packages:
       fpilote_mode: 'mode'
       fpilote_pos_pin: '6'
       fpilote_neg_pin: '7'
-      fpilote_hub: sx1509_hub1
+      fpilote_hub: sx1509_hub0
 
 ###################################################
 #         A supprimer si seulement 4 zones        #
@@ -131,7 +119,7 @@ packages:
       fpilote_mode: 'mode'                        #
       fpilote_pos_pin: '8'                        #
       fpilote_neg_pin: '9'                        #
-      fpilote_hub: sx1509_hub1                    #
+      fpilote_hub: sx1509_hub0                    #
 #                                                 #
   fil_pilote_zone_6: !include                     #
     file: packages/fil_pilote/device_fp_zone.yaml #
@@ -140,7 +128,7 @@ packages:
       fpilote_mode: 'mode'                        #
       fpilote_pos_pin: '10'                       #
       fpilote_neg_pin: '11'                       #
-      fpilote_hub: sx1509_hub1                    #
+      fpilote_hub: sx1509_hub0                    #
 #                                                 #
   fil_pilote_zone_7: !include                     #
     file: packages/fil_pilote/device_fp_zone.yaml #
@@ -149,7 +137,7 @@ packages:
       fpilote_mode: 'mode'                        #
       fpilote_pos_pin: '12'                       #
       fpilote_neg_pin: '13'                       #
-      fpilote_hub: sx1509_hub1                    #
+      fpilote_hub: sx1509_hub0                    #
 #                                                 #
   fil_pilote_zone_8: !include                     #
     file: packages/fil_pilote/device_fp_zone.yaml #
@@ -158,7 +146,7 @@ packages:
       fpilote_mode: 'mode'                        #
       fpilote_pos_pin: '14'                       #
       fpilote_neg_pin: '15'                       #
-      fpilote_hub: sx1509_hub1                    #
+      fpilote_hub: sx1509_hub0                    #
 #                                                 #
 ###################################################
 
